--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "source-map": "^0.5.6",
+    "styled-components": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
